render app vs ppmc comparison & fix bootstrap vulnerability

--- a/src/main/webapp/i18n/en/imputation.json
+++ b/src/main/webapp/i18n/en/imputation.json
@@ -33,7 +33,8 @@
             "start_date": "Start Date",
             "end_date": "End date",
             "difference": "Difference",
-            "collaborator": "Collaborator"
+            "collaborator": "Collaborator",
+            "total": "Total"
         }
     }
 }
